specs/001-typescript-to-zig-native/examples/valid/let-reassign.ts
let total: int = 1;
total = total + 2;

console.log(total);
