specs/001-typescript-to-zig-native/examples/invalid/const-reassign.ts
const total = 1;
total = 2;
